--- a/meite-shop-service-api-impl/meite-shop-service-wechat-impl/src/main/resources/application.yml
+++ b/meite-shop-service-api-impl/meite-shop-service-wechat-impl/src/main/resources/application.yml
@@ -1,22 +1,22 @@
-###服务启动端口号
-server:
-  port: 8200
-###服务名称(服务注册到eureka名称)
-spring:
-    application:
-        name: app-wechat
-###服务注册到eureka地址
-eureka:
-  client:
-    service-url:
-           defaultZone: http://localhost:8100/eureka
-
-swagger:
-  base-package: com.cn.service
-  title: SpringCloud2.x构建微服务电商项目-微信服务接口
-  description: 该项目“基于SpringCloud2.x构建微服务电商项目”
-  version: 1.1
-  terms-of-service-url: www.mayikt.com
-  contact:
-    name: 踏雪无痕
-    email: lamdong520@163.com
+####服务启动端口号
+#server:
+#  port: 8200
+####服务名称(服务注册到eureka名称)
+#spring:
+#    application:
+#        name: app-wechat
+####服务注册到eureka地址
+#eureka:
+#  client:
+#    service-url:
+#           defaultZone: http://localhost:8100/eureka
+#
+#swagger:
+#  base-package: com.cn.service
+#  title: SpringCloud2.x构建微服务电商项目-微信服务接口
+#  description: 该项目“基于SpringCloud2.x构建微服务电商项目”
+#  version: 1.1
+#  terms-of-service-url: www.mayikt.com
+#  contact:
+#    name: 踏雪无痕
+#    email: lamdong520@163.com
