--- a/meite-shop-service-api-impl/meite-shop-service-wechat-impl/src/main/resources/application.properties
+++ b/meite-shop-service-api-impl/meite-shop-service-wechat-impl/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 app.id=app-wechat
 apollo.meta=http://192.168.253.137:8080
+apollo.bootstrap.enabled = true
+apollo.bootstrap.namespaces = application,wechat
