--- a/meite-shop-service-api-impl/pom.xml
+++ b/meite-shop-service-api-impl/pom.xml
@@ -32,6 +32,15 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.cn</groupId>
+            <artifactId>meite-shop-common-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
