--- a/meite-shop-service-api/pom.xml
+++ b/meite-shop-service-api/pom.xml
@@ -19,5 +19,11 @@
             <artifactId>swagger-spring-boot-starter</artifactId>
             <version>1.7.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.cn</groupId>
+            <artifactId>meite-shop-common-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 </project>
