--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>meite-shop-entity</module>
         <module>meite-shop-service-impl</module>
         <module>meite-shop-service-api-impl</module>
+        <module>meite-shop-common</module>
     </modules>
 
     <parent>
