--- a/meite-shop-service-api-impl/meite-shop-service-member-impl/pom.xml
+++ b/meite-shop-service-api-impl/meite-shop-service-member-impl/pom.xml
@@ -30,10 +30,10 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
-		<!-- springcloud feign组件 -->
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<groupId>com.cn</groupId>
+			<artifactId>meite-shop-entity-member</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
