--- a/meite-shop-service-api-impl/meite-shop-service-wechat-impl/pom.xml
+++ b/meite-shop-service-api-impl/meite-shop-service-wechat-impl/pom.xml
@@ -25,9 +25,19 @@
 		</dependency>
 		<dependency>
 			<groupId>com.cn</groupId>
+			<artifactId>meite-shop-service-api-member</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.cn</groupId>
 			<artifactId>meite-shop-entity-wechat</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+        <dependency>
+            <groupId>com.cn</groupId>
+            <artifactId>meite-shop-entity-member</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
 		<dependency>
 			<groupId>com.github.binarywang</groupId>
