--- a/meite-shop-service-api-impl/meite-shop-service-wechat-impl/src/main/resources/application.yml
+++ b/meite-shop-service-api-impl/meite-shop-service-wechat-impl/src/main/resources/application.yml
@@ -33,6 +33,11 @@ spring:
       max-wait: 15000 # 连接池最大阻塞等待时间（使用负值表示没有限制）
       min-idle: 1 # 连接池中的最小空闲连接
 
+  datasource: # 主数据源，默认的
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://192.168.253.137:3306/meite_member?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=true
+    username: root
+    password: root
 
 
 ####服务启动端口号
