--- a/meite-shop-service-api/meite-shop-service-api-member/pom.xml
+++ b/meite-shop-service-api/meite-shop-service-api-member/pom.xml
@@ -23,6 +23,12 @@
 			<artifactId>meite-shop-entity-wechat</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.cn</groupId>
+			<artifactId>meite-shop-entity-member</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
