--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>meite-shop-service-impl</module>
         <module>meite-shop-service-api-impl</module>
         <module>meite-shop-common</module>
+        <module>meite-shop-api-dto</module>
     </modules>
 
     <parent>
