--- a/meite-shop-api-dto/pom.xml
+++ b/meite-shop-api-dto/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>meite-shop-entity</artifactId>
+    <artifactId>meite-shop-api-dto</artifactId>
 
     <dependencies>
         <dependency>
