--- a/meite-shop-service-api-impl/meite-shop-service-member-impl/pom.xml
+++ b/meite-shop-service-api-impl/meite-shop-service-member-impl/pom.xml
@@ -24,17 +24,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.cn</groupId>
-			<artifactId>meite-shop-entity-wechat</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.cn</groupId>
-			<artifactId>meite-shop-entity-member</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+        <dependency>
+            <groupId>com.cn</groupId>
+            <artifactId>meite-shop-member-dto</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
 		<dependency>
 			<groupId>com.cn</groupId>
