--- a/meite-shop-service-api/meite-shop-service-api-member/pom.xml
+++ b/meite-shop-service-api/meite-shop-service-api-member/pom.xml
@@ -18,15 +18,10 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.cn</groupId>
-			<artifactId>meite-shop-entity-wechat</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
 
 		<dependency>
 			<groupId>com.cn</groupId>
-			<artifactId>meite-shop-entity-member</artifactId>
+			<artifactId>meite-shop-member-dto</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
